# coding-hat

./: .gitignore  Cargo.toml  README.md  ideas.md
.devcontainer/: devcontainer.json  setup.sh
data/: config.cfg
data/problems/: 200079.prb  201517.prb
langs/: build_images.rs  languages.json
langs/java/: Dockerfile  Main.java  Solution.java  run.sh
langs/python/: Dockerfile  main.py  run.sh
scripts/: build_html.rs
src/: app.rs  config.rs  const.rs  database.rs  main.rs  misc.rs  problem.rs
src/api/: mod.rs  problem.rs  run.rs  self_info.rs
src/auth/: complete.rs  logout.rs  mod.rs  redirect.rs
src/langs/: java.rs  mod.rs  python.rs
src/sql/: create_attempts.sql  create_sessions.sql  create_solutions.sql  create_users.sql  querry_self.sql  update_not_new.sql  upsert_login.sql
web/: index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  vite.config.js
web/components/: header.html
web/html/: index.html
web/src/: App.svelte  NotFound.svelte  main.js  state.js
web/src/lib/: Content.svelte  Header.svelte
web/src/pages/: About.svelte  Group.svelte  Home.svelte  Problem.svelte
web/src/sass/: content.scss  index.scss
