[package]
authors = ["Connor Slade <connor@connorcode.com>"]
edition = "2021"
name = "coding_hat"
version = "0.1.0"

[dependencies]
afire = {version = "1.2.0", features = ["extensions", "tracing"]}
comrak = "0.14.0"
ctrlc = "3.2.3"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
rand = "0.8.5"
regex = "1.7.0"
rusqlite = {version = "0.28.0", features = ["bundled"]}
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
simple_config_parser = "1.0.0"
tempfile = "3.3.0"
urlencoding = "2.1.2"
